--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_typography.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_typography.scss
@@ -158,6 +158,10 @@ h5, h6 {
 	font-family: 'Khyeras Icons';
 }
 
+.icon.icon-xxl {
+	font-size: rem(22px);
+}
+
 .icon.icon-xl {
 	font-size: rem(18px);
 }
