Update excerpt styling and rpg icons, add new mixins

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_base.scss
@@ -161,9 +161,7 @@ a.anchor {
 
 .ellipsis-text {
 	display: inline-block;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
+	@include ellipsis;
 }
 
 .top-anchor {
