--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -401,9 +401,7 @@
 				margin: 0;
 				height: 30px;
 				line-height: 30px;
-				overflow: hidden;
-				text-overflow: ellipsis;
-				white-space: nowrap;
+				@include ellipsis;
 				background: rgba($color-02, 0.60);
 				text-align: center;
 			}
