--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -183,9 +183,7 @@
 				display: inline-block;
 			}
 			a {
-				white-space: nowrap;
-			    text-overflow: ellipsis;
-			    overflow: hidden;
+				@include ellipsis;
 			}
 			.icon {
 				margin: 0 5px 0 0;
@@ -692,6 +690,7 @@ dl.details {
 
 .rpg-icon-wrapper {
 	display: inline-block;
+	line-height: 0;
 	margin: 0 -5px;
 }
 
@@ -704,44 +703,4 @@ dl.details {
 	border: 1px solid mix($color-01, $color-04, 5%);
 	font-size: rem(18px);
 	text-align: center;
-}
-
-/* Card
-========================================================================== */
-
-.card {
-	@include flex-flow(row wrap);
-	align-items: center;
-	.card-image {
-		flex: 0 0 200px;
-		margin: 0 20px 20px 0;
-		.image-wrap {
-			border-radius: 100%;
-			border: 5px solid $color-04;
-			background-repeat: no-repeat;
-		    background-position: -9999px -9999px;
-		    background-size: cover;
-			box-shadow: 0 0 7.5px 3.75px rgba($color-02, 0.25);
-		}
-	}
-	.card-details {
-		@include flex(base);
-		h5 {
-			display: inline-block;
-			margin: 0;
-		}
-		h5, .rpg-icon-wrapper {
-			vertical-align: middle;
-		}
-		.rpg-icon-wrapper {
-			margin: 0 5px;
-		}
-		.card-header {
-			margin: 0 0 20px 0;
-		}
-	}
-	&.card-right .card-image {
-		margin: 0 0 20px 20px;
-		order: 1;
-	}
 }
