Worked on style for normal excerpt again

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -179,8 +179,13 @@
 			margin-left: 0;
 		}
 	}
-	.excerpt .excerpt-image {
-		flex: 0 0 130px;
+	.excerpt {
+		.excerpt-image {
+			flex: 0 0 130px;
+		}
+		.excerpt-details .excerpt-title {
+			max-width: 72%;
+		}
 	}
 
 	// cp.scss
@@ -317,6 +322,11 @@
 		dl[class*='forum'] dd.lastpost {
 			margin-left: auto;
 		}
+	}
+
+	// other-sections.scss
+	.excerpt .excerpt-details .excerpt-title {
+		max-width: 68%;
 	}
 
 	// cp.scss
@@ -773,19 +783,9 @@
 			padding: 0;
 		}
 	}
-	.excerpt, .excerpt-simple {
-		&.excerpt-right .excerpt-details .excerpt-header {
-			text-align: right;
-		}
-	}
-	.excerpt h5 a, .excerpt-simple h5 {
-		@include ellipsis;
-	}
 	.excerpt {
 		position: relative;
-		&, .excerpt-details h5 a {
-			display: block;
-		}
+		display: block;
 		.excerpt-image, &.excerpt-right .excerpt-image {
 			margin: 0 0 20px 0;
 		}
@@ -800,21 +800,34 @@
 			}
 		}
 		.excerpt-details {
-			h5 a {
+			.excerpt-title, .excerpt-title a, .rpg-icon-wrapper {
 				display: block;
 			}
-			.rpg-icon-wrapper {
-				@include position($type: relative, $top: -25px);
-			}
-			.excerpt-header {
+			.excerpt-title {
+				margin: 0;
+				max-width: none;
 				@include black-bar(98px, 2px, 2px);
+				a {
+					@include ellipsis;
+				}
+			}
+			.rpg-icon-wrapper {
+				float: right;
+				clear: left;
+				margin-bottom: 0;
+				padding: 0 0 5px 10px;
 			}
 		}
-	}
-	.excerpt-simple .excerpt-details .excerpt-header {
-		background: rgba($color-02, 0.60);
-		padding: 10px 20px;
-		border: 2px solid $color-04;
+		&.excerpt-right .excerpt-details {
+			.excerpt-title {
+				text-align: right;
+			}
+			.rpg-icon-wrapper {
+				float: left;
+				clear: right;
+				padding: 0 15px 5px 0;
+			}
+		}
 	}
 
 	// cp.scss
@@ -1338,11 +1351,6 @@
 			font-weight: bold;
 		}
 	}
-	.excerpt, .excerpt-simple {
-		.excerpt-details h5 {
-			max-width: 62.5%;
-		}
-	}
 
 	// cp.scss
 	.cp-main .gallery label {
@@ -1589,59 +1597,6 @@
 		}
 		select[name='ch'] {
 			margin-bottom: $ffs;
-		}
-	}
-	.excerpt, .excerpt-simple {
-		.excerpt-details {
-			h5, .rpg-icon-wrapper {
-				display: block;
-			}
-			h5 {
-				max-width: none;
-			}
-			.rpg-icon-wrapper {
-				padding: 0 10px 5px 0;
-			}
-			.excerpt-header {
-				background: none;
-				padding: 0;
-				margin: 0;
-			}
-		}
-		&.excerpt-right .rpg-icon-wrapper {
-			padding: 0 0 5px 10px;
-		}
-	}
-	.excerpt .excerpt-details .excerpt-header, .excerpt-simple .excerpt-details .rpg-icon-wrapper {
-		float: left;
-		clear: right;
-	}
-	.excerpt.excerpt-right .excerpt-details .excerpt-header, .excerpt-simple.excerpt-right .excerpt-details .rpg-icon-wrapper {
-		float: right;
-		clear: left;
-	}
-	.excerpt .excerpt-details {
-		h5 {
-			@include black-bar(98px, 2px, 2px);
-		}
-		.rpg-icon-wrapper {
-			top: 0;
-		}
-		.excerpt-header {
-			position: static;
-			height: auto;
-		}
-	}
-	.excerpt-simple .excerpt-details {
-		min-height: 100px;
-		h5 {
-			background: rgba(0,0,0,0.6);
-		    padding: 10px 20px;
-			margin: 0 0 20px 0;
-		    border: 2px solid $color-04;
-		}
-		.excerpt-header {
-			border: 0;
 		}
 	}
 
