--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
@@ -256,25 +256,6 @@ dl.faq + .top {
 /* Pages - Excerpts
 ========================================================================== */
 
-.excerpt, .excerpt-simple {
-	.excerpt-details {
-		h5, .rpg-icon-wrapper {
-			vertical-align: middle;
-		}
-		h5 {
-			display: inline-block;
-			margin: 0;
-			max-width: 75%;
-		}
-		.rpg-icon-wrapper {
-			padding: 0 0 0 5px;
-		}
-		.excerpt-header {
-			margin: 0 0 20px 0;
-		}
-	}
-}
-
 .excerpt {
 	@include flex-flow(row wrap);
 	align-items: center;
@@ -292,6 +273,16 @@ dl.faq + .top {
 	}
 	.excerpt-details {
 		@include flex(base);
+		.excerpt-title, .rpg-icon-wrapper {
+			@include inline-block(middle);
+		}
+		.excerpt-title {
+			max-width: 75%;
+		}
+		.rpg-icon-wrapper {
+			padding: 0 0 0 5px;
+			margin-bottom: 20px;
+		}
 	}
 	&.excerpt-right .excerpt-image {
 		margin: 0 0 20px 20px;
