--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -550,6 +550,7 @@
 							top: -20px;
 							left: -10px;
 							right: -10px;
+							z-index: 1;
 							@include sizing(auto, 120px);
 							border-radius: 0;
 							border: 0;
@@ -564,6 +565,7 @@
 						}
 						.forumtitle {
 							@include black-bar(50px, -10px, -10px);
+							z-index: 2;
 							color: $color-01;
 							@include spectral-common;
 							font-size: rem(20px);
