--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -32,7 +32,7 @@ $color-13: #aaaaaa; // gray
 $color-14: #f0a06a; // orange
 $color-15: #5e6c85; // blue gray
 $color-16: #591818; // red
-$color-17: ##266296; // blue
+$color-17: #266296; // blue
 $color-18: #962626; // red
 
 /* Fonts
